width overflow issue fixed

--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -12,6 +12,12 @@
   clip-path: inset(0% 0%, 100% 0%, 100% 30%, 0% 0%);
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 .about-top {
   font-weight: bold;
   font-size: 55px;
@@ -37,7 +43,6 @@
   color: #15ad93;
   text-shadow: 0px 1px 3px black;
   animation: 1s ease-out 0s 1 slideInFromLeft;
-  touch-action: none;
 }
 
 .about-right {
