--- a/app/assets/stylesheets/contact.scss
+++ b/app/assets/stylesheets/contact.scss
@@ -7,7 +7,7 @@
   -o-background-size: cover;
   background-size: cover;
   align-content: center;
-  width: 100%;
+  width: 100% !important;
   height: 100vh;
 }
 
